[gd_scene load_steps=38 format=3 uid="uid://dqwnxyoggefta"]

[ext_resource type="Texture2D" uid="uid://m7ib47koie3n" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/hurt/player-hurt-1.png" id="1_pjnm1"]
[ext_resource type="Script" path="res://Player.gd" id="1_tk26t"]
[ext_resource type="Texture2D" uid="uid://cwaeejr34igxf" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/hurt/player-hurt-2.png" id="2_lx17o"]
[ext_resource type="Texture2D" uid="uid://bujsu4o3m0exd" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/crouch/player-crouch-1.png" id="2_p36de"]
[ext_resource type="Texture2D" uid="uid://d3s4ad7buqent" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/crouch/player-crouch-2.png" id="3_1afvr"]
[ext_resource type="Texture2D" uid="uid://ddarf6omy0b2w" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/jump/player-jump-2.png" id="3_qfbwv"]
[ext_resource type="Texture2D" uid="uid://gd8xytreekqn" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-1.png" id="4_c45vg"]
[ext_resource type="Texture2D" uid="uid://bgll4nyx4u7mj" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/dash/player-dash-1.png" id="4_f4q6f"]
[ext_resource type="Texture2D" uid="uid://dpudqx24nw5jt" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-2.png" id="5_ma4l5"]
[ext_resource type="Texture2D" uid="uid://b8vr3tef0blw2" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/dash/player-dash-22.png" id="5_pv5yk"]
[ext_resource type="Texture2D" uid="uid://cdmjdo52k84be" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-3.png" id="6_ys235"]
[ext_resource type="Texture2D" uid="uid://dvkxir2stgrf4" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-4.png" id="7_k5o31"]
[ext_resource type="Texture2D" uid="uid://cwuokm2qd26f6" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/jump/player-jump-1.png" id="8_w12oy"]
[ext_resource type="Texture2D" uid="uid://cug1l0fwq2pme" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-1.png" id="9_o76fp"]
[ext_resource type="Texture2D" uid="uid://ckomsmnvpfkol" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-2.png" id="10_tc5fh"]
[ext_resource type="Texture2D" uid="uid://t30bm20ho21i" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-3.png" id="11_oja05"]
[ext_resource type="Texture2D" uid="uid://bqfo58mvh6ki" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-4.png" id="12_hjfal"]
[ext_resource type="Texture2D" uid="uid://cvrkj1ctigixr" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-5.png" id="13_3cpgt"]
[ext_resource type="Texture2D" uid="uid://cfwm0cmdbhkwl" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-6.png" id="14_ut1y4"]
[ext_resource type="PackedScene" uid="uid://b4sd0rj1twc0" path="res://Dash.tscn" id="18_4itk4"]
[ext_resource type="Texture2D" uid="uid://c25laecjwgrp7" path="res://assets/Sunny-land-files/Graphical Assets/sprites/player/stop/player-run-6-a-2.png" id="20_2fuh3"]
[ext_resource type="Script" path="res://JumpBufferTimer.gd" id="21_e5jay"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pma20"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cqgo"]
size = Vector2(28, 36)

[sub_resource type="Animation" id="Animation_fmw4r"]
resource_name = "Crouch"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Crouch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 1]
}

[sub_resource type="Animation" id="Animation_rewnb"]
resource_name = "Dash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 1]
}

[sub_resource type="Animation" id="Animation_c7y66"]
resource_name = "Death"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_j6fka"]
resource_name = "Fall"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ufff7"]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_shfuq"]
resource_name = "Idle"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nm4tp"]
resource_name = "Jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2s84u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}

[sub_resource type="Animation" id="Animation_0iflh"]
resource_name = "Run"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hcwty"]
resource_name = "Stop"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhyhp"]
_data = {
"Crouch": SubResource("Animation_fmw4r"),
"Dash": SubResource("Animation_rewnb"),
"Death": SubResource("Animation_c7y66"),
"Fall": SubResource("Animation_j6fka"),
"Hurt": SubResource("Animation_ufff7"),
"Idle": SubResource("Animation_shfuq"),
"Jump": SubResource("Animation_nm4tp"),
"RESET": SubResource("Animation_2s84u"),
"Run": SubResource("Animation_0iflh"),
"Stop": SubResource("Animation_hcwty")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_lpr7b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p36de")
}, {
"duration": 1.0,
"texture": ExtResource("3_1afvr")
}, {
"duration": 1.0,
"texture": ExtResource("2_p36de")
}, {
"duration": 1.0,
"texture": ExtResource("3_1afvr")
}, {
"duration": 1.0,
"texture": ExtResource("2_p36de")
}, {
"duration": 1.0,
"texture": ExtResource("3_1afvr")
}],
"loop": true,
"name": &"Crouch",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_f4q6f")
}, {
"duration": 1.0,
"texture": ExtResource("5_pv5yk")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pjnm1")
}, {
"duration": 1.0,
"texture": ExtResource("2_lx17o")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qfbwv")
}],
"loop": true,
"name": &"Fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pjnm1")
}, {
"duration": 1.0,
"texture": ExtResource("2_lx17o")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c45vg")
}, {
"duration": 1.0,
"texture": ExtResource("5_ma4l5")
}, {
"duration": 1.0,
"texture": ExtResource("6_ys235")
}, {
"duration": 1.0,
"texture": ExtResource("7_k5o31")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_w12oy")
}, {
"duration": 1.0,
"texture": ExtResource("3_qfbwv")
}],
"loop": true,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_o76fp")
}, {
"duration": 1.0,
"texture": ExtResource("10_tc5fh")
}, {
"duration": 1.0,
"texture": ExtResource("11_oja05")
}, {
"duration": 1.0,
"texture": ExtResource("12_hjfal")
}, {
"duration": 1.0,
"texture": ExtResource("13_3cpgt")
}, {
"duration": 1.0,
"texture": ExtResource("14_ut1y4")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_2fuh3")
}],
"loop": true,
"name": &"Stop",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_45qpb"]

[node name="Player2" type="CharacterBody2D"]
script = ExtResource("1_tk26t")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_pma20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
scale = Vector2(1, 0.6)
shape = SubResource("RectangleShape2D_1cqgo")
debug_color = Color(0.0784314, 0.568627, 0.843137, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vhyhp")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
limit_left = 0
limit_top = 0
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -8)
scale = Vector2(1.8, 1.642)
sprite_frames = SubResource("SpriteFrames_lpr7b")
animation = &"Death"

[node name="Dash" parent="." instance=ExtResource("18_4itk4")]

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
script = ExtResource("21_e5jay")

[node name="DetectEagle" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectEagle"]
light_mask = 3
visibility_layer = 3
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_45qpb")

[node name="PlataformCrouchTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="body_entered" from="DetectEagle" to="." method="_on_detect_eagle_body_entered"]
[connection signal="timeout" from="PlataformCrouchTimer" to="." method="_on_plataform_crouch_timer_timeout"]
